# identity

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  identity.doap  meson.build  meson_options.txt
build-aux/: cargo.sh  org.gnome.gitlab.YaLTeR.Identity.Devel.json  org.gnome.gitlab.YaLTeR.IdentityDevel.json
data/: meson.build  org.gnome.gitlab.YaLTeR.Identity.desktop.in.in  org.gnome.gitlab.YaLTeR.Identity.gschema.xml  org.gnome.gitlab.YaLTeR.Identity.gschema.xml.in  org.gnome.gitlab.YaLTeR.Identity.metainfo.xml.in.in  resources.gresource.xml
data/resources/: meson.build  resources.gresource.xml  resources.gresource.xml.in  style-dark.css  style-hc.css  style.css
data/resources/ui/: about_dialog.ui.in  media_page.ui  media_properties.blp  meson.build  page.blp  page_grid.blp  shortcuts.blp  shortcuts.ui  window.blp  window.ui.in
docs/path-json/: README.md
po/: LINGUAS  POTFILES.in  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  kw.po  meson.build  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  (+6 more)
src/: application.rs  config.rs.in  glycin.rs  main.rs  media_properties.rs  meson.build  page.rs  page_grid.rs  path_recorder.rs  picture.rs  player.rs  premultiply.frag  scale_request.rs  texture_paintable.rs  thumbnail_paintable.rs  utils.rs  window.rs  window_state.rs
subprojects/: blueprint-compiler.wrap
